# devassistant-addon

./: README.asciidoc  pom.xml
src/main/java/org/devassistant/: package-info.java
src/main/java/org/devassistant/commands/: DevAssistantCommand.java
src/main/java/org/devassistant/project/: AbstractDevAssistantProjectType.java  AbstractProjectExecuteStep.java  DevAssistantProject.java  DevAssistantProjectProvider.java
src/main/java/org/devassistant/project/c/: CProjectExecuteStep.java  CProjectType.java
src/main/java/org/devassistant/project/cpp/: CPPProjectExecuteStep.java  CPPProjectType.java
src/main/java/org/devassistant/project/facet/: DevAssistantMetadataFacet.java  DevAssistantProjectFacet.java
src/main/java/org/devassistant/project/perl/: PerlBasicClassExecuteStep.java  PerlBasicClassProjectType.java  PerlDancerClassExecuteStep.java  PerlDancerProjectType.java  PerlProjectExecuteStep.java  PerlProjectType.java
src/main/java/org/devassistant/project/php/: PHPProjectExecuteStep.java  PHPProjectType.java
src/main/java/org/devassistant/resource/: DevAssistantResourceGenerator.java  DevAssistantYamlResource.java
src/main/java/org/devassistant/utils/: Paths.java  Resources.java  TriConsumer.java
src/main/resources/files/crt/c/: Makefile.am  cdevelopmenttool.spec  configure.ac  main.c  post_create.sh
src/main/resources/files/crt/cpp/: Makefile.am  cdevelopmenttool.spec  configure.ac  main.cpp  post_create.sh
src/main/resources/files/snippets/vim/: vim_update.sh
src/test/java/org/devassistant/: AbstractTestCase.java
(+27 files in other folders)
